# Image-Processing-Application-with-OpenCv-and-PyQt6

./: README.md  pyproject.toml
src/: main.py
